<resources>
    <string name="app_name">QuickBuy</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_acc">Don\'t Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="profile_email_label">Email:</string>
    <string name="username_hint">Enter your username</string>
    <string name="logout_button">Logout</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="add_payment_button">Add Payment Method</string>
    <string name="help_button">Help</string>
    <string name="username_label">Username:</string>
    <string name="save_username_button">Save Username</string>
</resources>